// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboard adds class via Drupal Attributes 1`] = `
<bolt-onboard class="u-bolt-margin-top-medium">
  <replace-with-children class="c-bolt-onboard c-bolt-onboard--status-information c-bolt-onboard--size-default c-bolt-onboard--radius-none">
  </replace-with-children>
</bolt-onboard>
`;

exports[`Onboard basic usage 1`] = `
<bolt-onboard>
  <replace-with-children class="c-bolt-onboard c-bolt-onboard--status-information c-bolt-onboard--size-default c-bolt-onboard--radius-none">
  </replace-with-children>
</bolt-onboard>
`;

exports[`Onboard renders with Shadow DOM 1`] = `
<div
  class="c-bolt-onboard c-bolt-onboard--status-information c-bolt-onboard--size-default c-bolt-onboard--radius-none"
  style=""
>
  
        
  <slot
    style=""
  />
  
      
</div>
`;

exports[`Onboard renders with Shadow DOM 2`] = `
<bolt-onboard
  style=""
>
  Onboard test
</bolt-onboard>
`;

exports[`Onboard renders without Shadow DOM 1`] = `
<bolt-onboard
  no-shadow=""
  style=""
>
  <!---->
  
      
  <div
    class="c-bolt-onboard c-bolt-onboard--status-information c-bolt-onboard--size-default c-bolt-onboard--radius-none"
    style=""
  >
    
        
    <!---->
    Onboard test
    <!---->
    
      
  </div>
  
    
  <!---->
</bolt-onboard>
`;

exports[`Onboard sets 'disabled' prop 1`] = `
<bolt-onboard>
  <replace-with-children class="c-bolt-onboard c-bolt-onboard--status-information c-bolt-onboard--size-default c-bolt-onboard--radius-none">
  </replace-with-children>
</bolt-onboard>
`;
